--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "export-to-csv": "^1.4.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
+    "papaparse": "^5.5.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.19.1",
